Fixed short-container clipping

--- a/style.css
+++ b/style.css
@@ -117,7 +117,7 @@ nav > .container {
 }
 
 .container-short {
-    height: 110px;
+    height: 120px;
 }
 
 .skill-container {
@@ -125,6 +125,7 @@ nav > .container {
     border-radius: 10px;
     border: 1px solid #cbcbcb;
     overflow: hidden;
+    margin-top: -90px;
 }
 
 .skill-container > .row {
